--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
@@ -1,108 +1,110 @@
 ﻿@model HospitalDoctorVisitingChargesViewModel
 @{
-	ViewBag.Title = Model.HospitalDoctorVisitingChargesId > 0 ? "Update Hospital Doctor Visiting Charges" : "Add Hospital Doctor Visiting Charges";
-	string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-	string actionName = ViewContext.RouteData.Values["action"].ToString();
+    ViewBag.Title = Model.HospitalDoctorVisitingChargesId > 0 ? "Update Hospital Doctor Visiting Charges" : "Add Hospital Doctor Visiting Charges";
+    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="card">
-					<div class="card-header">
-						<div class="row align-items-center">
-							<div class="col">
-								@if (Model.HospitalDoctorVisitingChargesId > 0)
-								{
-									<h4 class="card-title">Update Hospital Doctor Visiting Charges </h4>
-								}
-								else
-								{
-									<h4 class="card-title">Hospital Doctor Visiting Charges</h4>
-								}
-							</div><!--end col-->
-						</div>  <!--end row-->
-					</div>
-					<div class="card-body">
-						@using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
-						{
-							@Html.HiddenFor(m => m.HospitalDoctorVisitingChargesId)
-							@Html.HiddenFor(m => m.HospitalDoctorId)
-							<div class="row">
-								<div class="col-lg-3">
-									<div class="mb-3">
-										@Html.LabelFor(x => x.FromDate, new { @class = "form-label required" })
-										@Html.TextBoxFor(x => x.FromDate, new { @class = "form-control",@readonly = "true" })
-										@Html.ValidationMessageFor(x => x.FromDate)
-									</div>
-								</div>
-								<div class="col-lg-3">
-									<div class="mb-3">
-										@Html.LabelFor(x => x.UptoDate, new { @class = "form-label" })
-										@Html.TextBoxFor(x => x.UptoDate, new { @class = "form-control" ,@readonly = "true"})
-										@Html.ValidationMessageFor(x => x.UptoDate)
-									</div>
-								</div>
-								<div class="col-lg-3">
-									<div class="mb-3">
-										@Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label required" })
-										@Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-	{
-		DropdownSelectedValue = Model.AppointmentTypeEnumId.ToString(),
-		DropdownName = "AppointmentTypeEnumId",
-		GroupCode = DropdownTypeEnum.HospitalAppointmentType.ToString(),
-		IsRequired = true,
-	})
-										@Html.ValidationMessageFor(x => x.AppointmentTypeEnumId)
-									</div>
-								</div>
-								<div class="col-lg-3">
-									<div class="mb-3">
-										@Html.LabelFor(x => x.Charges, new { @class = "form-label required" })
-										@Html.TextBoxFor(x => x.Charges, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidDecimalNumeric()" })
-										@Html.ValidationMessageFor(x => x.Charges)
-									</div>
-								</div>
-								<div class="col-lg-12">
-									<div class="mb-3">
-										@Html.LabelFor(x => x.Remark, new { @class = "form-label" })
-										@Html.TextAreaFor(x => x.Remark, new { @class = "form-control" })
-										@Html.ValidationMessageFor(x => x.Remark)
-									</div>
-								</div>
-							</div>
-							<button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-							<a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
-						}
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                @if (Model.HospitalDoctorVisitingChargesId > 0)
+                                {
+                                    <h4 class="card-title">Update Hospital Doctor Visiting Charges: @Model.FirstName @Model.LastName </h4>
+                                }
+                                else
+                                {
+                                    <h4 class="card-title">Create Hospital Doctor Visiting Charges: @Model.FirstName @Model.LastName</h4>
+                                }
+                            </div><!--end col-->
+                        </div>  <!--end row-->
+                    </div>
+                    <div class="card-body">
+                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
+                        {
+                            @Html.HiddenFor(m => m.HospitalDoctorVisitingChargesId)
+                            @Html.HiddenFor(m => m.HospitalDoctorId)
+                            @Html.HiddenFor(m => m.FirstName)
+                            @Html.HiddenFor(m => m.LastName)
+                            <div class="row">
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.FromDate, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.FromDate, new { @class = "form-control", @readonly = "true" })
+                                        @Html.ValidationMessageFor(x => x.FromDate)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.UptoDate, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.UptoDate, new { @class = "form-control", @readonly = "true" })
+                                        @Html.ValidationMessageFor(x => x.UptoDate)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.AppointmentTypeEnumId.ToString(),
+                                   DropdownName = "AppointmentTypeEnumId",
+                                   GroupCode = DropdownTypeEnum.HospitalAppointmentType.ToString(),
+                                   IsRequired = true,
+                               })
+                                        @Html.ValidationMessageFor(x => x.AppointmentTypeEnumId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.Charges, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Charges, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidDecimalNumeric()" })
+                                        @Html.ValidationMessageFor(x => x.Charges)
+                                    </div>
+                                </div>
+                                <div class="col-lg-12">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.Remark, new { @class = "form-label" })
+                                        @Html.TextAreaFor(x => x.Remark, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.Remark)
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <a href="../@controllerName/GetHospitalDoctorVisitingChargesByDoctorIdList?hospitalDoctorId=@Model.HospitalDoctorId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 @section scripts {
-	<script type="text/javascript">
-		$(function () {
-			$("#FromDate").datepicker({
-				changeMonth: true,
-				changeYear: true,
-				format: "dd-mm-yyyy",
-				language: "tr"
-			});
-		});
-		$(function () {
-			$("#UptoDate").datepicker({
-				changeMonth: true,
-				changeYear: true,
-				format: "dd-mm-yyyy",
-				language: "tr"
-			});
-		});
-	</script>
-	@* <script>
+    <script type="text/javascript">
+        $(function () {
+            $("#FromDate").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                format: "dd-mm-yyyy",
+                language: "tr"
+            });
+        });
+        $(function () {
+            $("#UptoDate").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                format: "dd-mm-yyyy",
+                language: "tr"
+            });
+        });
+    </script>
+    @* <script>
 		$(function () {
 			$('#FromDate').daterangepicker({
 				singleDatePicker: true,
