--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEmailTemplate/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEmailTemplate/CreateEdit.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = Model.GeneralEmailTemplateId > 0 ? "Update Email Template" : "Add Email Template";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel moduleDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.ModuleList.ToString(), DropdownName = "ModuleCode", DropdownSelectedValue = Model.ModuleCode, ChangeEvent = "UserMainMenu.GetParentMemuCodeByModuleCode()" };
 }
 
 <!-- Page Content-->
@@ -30,14 +31,14 @@
                         {
                             @Html.HiddenFor(m => m.GeneralEmailTemplateId)
                             <div class="row">
-                                <div class="col-lg-6">
+                                <div class="col-lg-5">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmailTemplateName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.EmailTemplateName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.EmailTemplateName)
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-5">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmailTemplateCode, new { @class = "form-label required" })
                                         @if (Model.GeneralEmailTemplateId > 0)
@@ -49,6 +50,13 @@
                                             @Html.TextBoxFor(x => x.EmailTemplateCode, new { @class = "form-control" })
                                         }
                                         @Html.ValidationMessageFor(x => x.EmailTemplateCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-2">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ModuleCode, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", moduleDropdown)
+                                        @Html.ValidationMessageFor(x => x.ModuleCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
