--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
@@ -29,6 +29,11 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.GeneralRunningNumberId)
+                            @if (Model.GeneralRunningNumberId > 0)
+                            {
+                                @Html.HiddenFor(m => m.CentreCode)
+                                @Html.HiddenFor(m => m.KeyFieldEnumId)
+                            }
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
@@ -56,7 +61,7 @@
                                         @Html.ValidationMessageFor(x => x.Description)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-2">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.KeyFieldEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
@@ -69,20 +74,21 @@
                                         @Html.ValidationMessageFor(x => x.KeyFieldEnumId)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.DisplayFormat, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.DisplayFormat, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.DisplayFormat)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-2">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Prefix, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.Prefix, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Prefix)
                                     </div>
                                 </div>
+                                <div class="col-lg-8">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.DisplayFormat, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.DisplayFormat, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.DisplayFormat)
+                                    </div>
+                                </div>
+                               
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Separator, new { @class = "form-label required" })
