--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/_GymMemberBodyMeasurementPopUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/_GymMemberBodyMeasurementPopUp.cshtml
@@ -66,7 +66,7 @@
                         document.getElementById(this.id).value = '';
                     }
                 },
-                minDate: "-1M",
+                minDate: new Date(),
                 maxDate: new Date()
             });
         });
