--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/CreateEdit.cshtml
@@ -3,8 +3,7 @@
     ViewBag.Title = Model.HospitalPatientAppointmentId > 0 ? "Update Hospital Patient Appointment" : "Add Hospital Patient Appointment";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetHospitalDoctorsListByCentreCodeAndDepartmentId()" };
-    // DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetHospitalDoctorsListByCentreCodeAndDepartmentId()" };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()", IsDisabled = Model.HospitalPatientAppointmentId > 0 };
 
 }
 <!-- Page Content-->
@@ -39,27 +38,23 @@
                                         @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
-                               @*  <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedDepartmentId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", departmentDropdown)
-                                        @Html.ValidationMessageFor(x => x.SelectedDepartmentId)
-                                    </div>
-                                </div> *@
+
 
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label required " })
+                                        @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.MedicalSpecilizationEnumId.ToString(),
                                    DropdownName = "MedicalSpecilizationEnumId",
-                                   GroupCode = DropdownTypeEnum.MedicalSpecilization.ToString()
+                                   GroupCode = DropdownTypeEnum.MedicalSpecilization.ToString(),
+                                   ChangeEvent = "HospitalPatientAppointment.GetDoctorsByCentreCodeAndSpecialization()"
                                })
                                         @Html.ValidationMessageFor(x => x.MedicalSpecilizationEnumId)
                                     </div>
                                 </div>
-                                <div class="row">
+
+
                                 @if (Model.HospitalPatientAppointmentId > 0)
                                 {
                                     @Html.HiddenFor(x => x.HospitalDoctorId)
@@ -68,22 +63,19 @@
                                 {
                                     <div class="col-lg-4">
                                         <div class="mb-3">
-                                            @Html.LabelFor(x => x.HospitalDoctorId, new { @class = "form-label required " })
+                                            @Html.LabelFor(x => x.HospitalDoctorId, new { @class = "form-label " })
                                             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
-                                   DropdownType = DropdownTypeEnum.HospitalDoctorsList.ToString(),
+                                   DropdownType = DropdownTypeEnum.HospitalDoctorsListBySpecialization.ToString(),
                                    DropdownName = "HospitalDoctorId",
                                    DropdownSelectedValue = Model.HospitalDoctorId
                                     .ToString(),
-                                   Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}" : "" 
-
+                                   Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}~{Model.MedicalSpecilizationEnumId}" : ""
                                })
                                             @Html.ValidationMessageFor(x => x.HospitalDoctorId)
                                         </div>
                                     </div>
                                 }
-                                </div>
-                                <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.AppointmentDate, new { @class = "form-label required" })
@@ -91,60 +83,66 @@
                                         @Html.ValidationMessageFor(x => x.AppointmentDate)
                                     </div>
                                 </div>
+                                @if (Model.HospitalPatientAppointmentId > 0)
+                                {
+                                    @Html.HiddenFor(x => x.AppointmentTypeEnumId)
+                                }
+                                else
+                                {
+                                    <div class="col-lg-4">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label" })
+                                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.AppointmentTypeEnumId.ToString(),
+                                   DropdownName = "AppointmentTypeEnumId",
+                                   GroupCode = DropdownTypeEnum.HospitalAppointmentType.ToString(),
+                                   IsRequired = true,
+                               })
+                                            @Html.ValidationMessageFor(x => x.AppointmentTypeEnumId)
+                                        </div>
+                                    </div>
+                                }
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label"})
-                                        @Html.TextBoxFor(x => x.AppointmentTypeEnumId, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.AppointmentTypeEnumId)
+                                        @Html.LabelFor(x => x.RequestedTimeSlot, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.RequestedTimeSlot.ToString(),
+                                   DropdownName = "RequestedTimeSlot",
+                               })
+                                        @Html.ValidationMessageFor(x => x.RequestedTimeSlot)
                                     </div>
                                 </div>
-                                    <div class="col-lg-4">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.RequestedTimeSlot, new { @class = "form-label"})
-                                            @Html.TextBoxFor(x => x.RequestedTimeSlot, new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.RequestedTimeSlot)
-                                        </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.HospitalPatientAppointmentPurposeId, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownType = DropdownTypeEnum.HospitalPatientAppointmentPurpose.ToString(),
+                                   DropdownSelectedValue = Model.HospitalPatientAppointmentPurposeId.ToString(),
+                                   DropdownName = "HospitalPatientAppointmentPurposeId",
+                               })
+                                        @Html.ValidationMessageFor(x => x.HospitalPatientAppointmentPurposeId)
                                     </div>
-                                    <div class="col-lg-4">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.HospitalPatientAppointmentPurposeId, new { @class = "form-label"})
-                                            @Html.TextBoxFor(x => x.HospitalPatientAppointmentPurposeId, new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.HospitalPatientAppointmentPurposeId)
-                                        </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ApprovalStatusEnumId, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.ApprovalStatusEnumId, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.ApprovalStatusEnumId)
                                     </div>
-                                    <div class="col-lg-4">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.ApprovalStatusEnumId, new { @class = "form-label" })
-                                            @Html.TextBoxFor(x => x.ApprovalStatusEnumId, new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.ApprovalStatusEnumId)
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.HospitalPatientRegistrationId, new { @class = "form-label" })
-                                            @Html.TextBoxFor(x => x.HospitalPatientRegistrationId, new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.HospitalPatientRegistrationId)
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.HospitalTempPersonId, new { @class = "form-label" })
-                                            @Html.TextBoxFor(x => x.HospitalTempPersonId, new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.HospitalTempPersonId)
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-2">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.IsAttended, new { @class = "form-label required" })
-                                            <div class="form-check">
-                                                @Html.CheckBoxFor(x => x.IsAttended, new { @class = "form-check-input"})
-                                            </div>
+                                </div>
+                                <div class="col-lg-2">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsAttended, new { @class = "form-label required" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsAttended, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
-                               
                             </div>
-                            <button type="submit" class="btn btn-success" data-test-selector="linkSave" onclick="HospitalDoctorLeaveSchedule.ValidateLeaveScheduleTime()">@AdminResources.LabelSave</button>
+                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
@@ -153,59 +151,16 @@
         </div>
     </div>
 </div>
-
-<!-- Your custom scripts -->
-@Html.Partial("_ValidationScriptsPartial")
-<script src="~/js/coditech/hms/hospitaldoctorleaveschedule.js"></script>
-<script src="~/js/layout/daterangepicker.js"></script>
 @section scripts {
-    <script>
+    <script type="text/javascript">
         $(function () {
-            $('#AppointmentDate').daterangepicker({
-                singleDatePicker: true,
-                showDropdowns: true,
-                showWeekNumbers: false,
-                drops: "auto",
-                opens: "right",
-                autoApply: true,
-                "locale": {
-        @* "format": "DD-MM-YYYY", *@
-                "separator": " - ",
-                "applyLabel": "Apply",
-                "cancelLabel": "Cancel",
-                "fromLabel": "From",
-                "toLabel": "To",
-                "customRangeLabel": "Custom",
-                "weekLabel": "W",
-                "daysOfWeek": [
-                "Su",
-                "Mo",
-                "Tu",
-                "We",
-                "Th",
-                "Fr",
-                "Sa"
-            ],
-                "monthNames": [
-                "January",
-                "February",
-                "March",
-                "April",
-                "May",
-                "June",
-                "July",
-                "August",
-                "September",
-                "October",
-                "November",
-                "December"
-            ],
-                "firstDay": 1
-                                                                                                                                                            },
-            minYear: new Date().getFullYear(),
-            maxYear: new Date().getFullYear() + 1
-                                                                                                                                                        },
-            function (start, end, label) { });
-                                                                                                                                                    });
+            $("#AppointmentDate").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                format: "dd-mm-yyyy",
+                language: "tr"
+            });
+        });
     </script>
 }
+<script src="~/js/coditech/HMS/HospitalPatientAppointment.js"></script>
