--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
@@ -26,7 +26,18 @@
                             css = item.IsActive ? "" : "pointer-events: none;";
                         };
                         <tr>
-                            <td style="text-align: center; width: 0px"><img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" /></td>
+                            <td style="text-align: center; width: 0px">
+                                @if (!string.IsNullOrEmpty(item.ImagePath))
+                                {
+                                    <img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" />
+                                }
+                                else
+                                {
+                                    <div class="avatar-box thumb-md align-self-center">
+                                        <span class="avatar-title bg-soft-pink rounded-circle">@item.FirstName.Substring(0, 1)@item.LastName.Substring(0, 1)</span>
+                                    </div>
+                                }
+                            </td>
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
                             <td>@item.MobileNumber</td>
