--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Profile.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Profile.cshtml
@@ -8,7 +8,16 @@
 <li class="dropdown">
     <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-bs-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="false">
         <span class="ms-1 nav-user-name hidden-sm">@Model.FirstName @Model.LastName</span>
-        <img src="~/assets/images/user/user-5.jpg" alt="profile-user" class="rounded-circle thumb-sm">
+        @if (!string.IsNullOrEmpty(Model.ImagePath))
+        {
+            <img src="@Model.ImagePath" alt="profile-user" class="rounded-circle thumb-sm">
+        }
+        else
+        {
+            <div class="avatar-box thumb-md align-self-center">
+                <span class="avatar-title bg-soft-pink rounded-circle">@Model.FirstName.Substring(0, 1)@Model.LastName.Substring(0, 1)</span>
+            </div>
+        }
     </a>
     <div class="dropdown-menu dropdown-menu-end">
         @*  <a class="dropdown-item" href="#">
